# resale-ai-system

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  alembic.ini  pyproject.toml  pyrightconfig.json  resale_system_rundown.md
config/: categories.json  ebay_fields.json  model_profiles.json  platforms.json  rules.json  settings.yaml  sku_prefixes.json
docs/: ARCHITECTURE.md  E2E_TEST_PLAN.md  README.md  ROADMAP.md  openapi.json
docs/roadmap/: LIVE_LISTING_RECONCILIATION_PHASE_2A.md  RESALE_AI_SYSTEM_ROADMAP.md
docs/runbooks/: BK-000008_STALE_OFFER_REFRESH_RUNBOOK.md
scripts/: analyze_all.py  analyze_one.py  backfill.py  backup_db.py  check_db.py  check_statuses.py  enrich_all.py  export_ebay_csv.py  export_master.py  export_openapi.py  export_stale_offer_approval_packet.py  fetch_policies.py  fix_item_modes.py  fix_jpeg_paths.py  fix_local_paths.py  folder_watcher.py  inspect_review_reasons.py  install_service.py  list_clothing.py  mark_export_ready.py  publish_all.py  reset_pending.py  restore_db.py  restore_images.py  retriage.py  review_reasons.py  run_bulk_reintake_preview.py  run_category_intelligence.py  run_e2e.py
tests/: conftest.py
tests/fixtures/: mock_ebay.py  mock_extraction.py  sample_items.py
tests/integration/: test_analyze_flow.py  test_bulk_publish_safety.py  test_bulk_reintake_preview.py  test_capture_intake_readiness.py  test_claude_diagnostics.py  test_diagnostic_cockpit_ui.py  test_diagnostic_reports.py  test_ebay_failure_modes_mocked.py  test_ebay_publish.py  test_intake_claude_provider_routes.py  test_intake_correction_report_v2_routes.py  test_intake_pipeline.py  test_intake_pipeline_real_patterns.py  test_intake_pipeline_routes.py  test_intake_quality_routes.py  test_intake_ui_routes.py  test_item_repo.py  test_items_process_constrained.py  test_listing_lifecycle_mocked.py  test_operation_diagnostics.py  test_photo_hosting_endpoint.py  test_photo_metadata_persistence.py  test_photo_metadata_routes.py  test_platform_translation_routes.py  test_publish_diagnostics_batch.py  test_publish_preview.py  test_publish_readiness.py  test_publish_repair_queue.py  test_revise_preview.py  test_sold_readiness.py
tests/unit/: test_category_intelligence_failures.py  test_category_mapper.py  test_csv_writer.py  test_e2e_guard.py  test_ebay_api_error_classification.py  test_ebay_auth_diagnostics.py  test_ebay_auth_dry_run.py  test_evidence_planner.py  test_folder_scanner.py  test_intake_claude_provider.py  (+28 more)
(+36 files in other folders)
