[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resale-ai-system"
version = "0.1.0"
description = "Local-first resale automation system with AI vision and eBay publishing"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlmodel>=0.0.18",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "pillow>=10.3.0",
    "openpyxl>=3.1.2",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.4",
]

[tool.uv.workspace]
members = ["apps/*", "packages/*"]

[tool.hatch.build.targets.wheel]
packages = ["apps", "packages"]

[tool.pyright]
pythonVersion = "3.11"
include = ["apps", "packages", "scripts"]
venvPath = "."
venv = ".venv"
