[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resale-ai-system"
version = "0.1.0"
description = "Local-first resale automation pipeline — intake, vision, triage, eBay export"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # Data / ORM
    "sqlmodel>=0.0.18",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",

    # Validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",

    # Spreadsheet / export
    "openpyxl>=3.1.2",
    "pandas>=2.2.2",

    # Image processing
    "Pillow>=10.3.0",
    "opencv-python-headless>=4.9.0.80",

    # Vision / AI provider
    "httpx>=0.27.0",
    "ollama>=0.2.1",

    # Photo hosting
    "cloudinary>=1.36.0",

    # Utilities
    "rich>=13.7.1",
    "typer>=0.12.3",
    "python-dotenv>=1.0.1",
    "tenacity>=8.3.0",
    "python-slugify>=8.0.4",
    "orjson>=3.10.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
]

[project.scripts]
resale = "apps.api.src.main:app"

[tool.hatch.build.targets.wheel]
packages = ["apps", "packages"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
